@@ -1,3 +1,5 @@
-EBUILD qtwitter-9999.ebuild 1682 RMD160 84822236566a347b0ed3417df031b467c9b559f3 SHA1 6d988269ffbef941975b609cd7f27c27ac8a1a75 SHA256 bed5985c0d265528b612cf1a46e767bea879db5218e033323da64bb72cc9e7a8
-MISC ChangeLog 2776 RMD160 348a0435ccc4d69aef984033810c23ca6352271b SHA1 764e5c7ddd5ab6b5d20d193a82fae8184a27d497 SHA256 292ae9e691a0c93797017d4dae4b3971d6e458e4ab4675598828c18d58ee446d
+DIST qtwitter-0.9.0-src.tar.gz 730360 RMD160 ee2997f9570e489cc91668a6a3a0a320011d46f5 SHA1 9150815ecbb0c3bcb92e88e7a97a4fbbbcfa6991 SHA256 e7b3136405aba36344509973a87df905ad0f4f4f806a362e9423d85d6d46a78f
+EBUILD qtwitter-0.9.0.ebuild 1880 RMD160 954008ace7d022add33eb8fa6636e784a6cd7403 SHA1 e9c3c79bbed238c91ca6803dc2d1428c91d1fc3e SHA256 919625727aaad1ea17d4ba8a058e7b7e558ecb5f83cd90b3d8190c88c4d59fe1
+EBUILD qtwitter-9999.ebuild 1568 RMD160 45eafc8f966e01bb8fcc505748ad8338faa468bc SHA1 4c111a45bbc5b876d90d05b9de5da315e3117998 SHA256 b6f0f49036a6a1de82a8a6eefe821097f693f850ba135beba37f5562afc1a36b
+MISC ChangeLog 2915 RMD160 80d2433b1d919e8feccaa491893924d3104f40ed SHA1 6cd2a8da27af66feb6ff20cde51fed54d18f3d0d SHA256 f33801b1c9276d5ca598b0c9776b7fa629b6669f32961f88489cc2d68bdf06e8
 MISC metadata.xml 380 RMD160 e11d6dc2585d571ec9d9ddccc1d581a3b7cafedf SHA1 f0963ee391975a19e9b70670bda55946c4789cc0 SHA256 b54d5ce923bbb84db04164aeb2824b7edd7e1d0c8f1a9d961188f3427a727310
